--- a/mandala-editor-plugin/css/jquery.orgchart.css
+++ b/mandala-editor-plugin/css/jquery.orgchart.css
@@ -14,6 +14,10 @@ div.orgChart h2, div.orgChart h3, div.orgChart span {
   margin-bottom: 5px;
 }
 
+div.orgChart h3 {
+  color: #2271b1;
+}
+
 div.orgChart h2:hover, div.orgChart h3:hover {
   background: #fcfaca;
   cursor: text;
@@ -73,6 +77,8 @@ div.orgChart div.node {
   box-shadow: 1px 1px 0px #ddd;
 }
 
+.org-hide-button,
+.org-show-button,
 .org-add-button,
 .org-del-button,
 .org-confirm-del-button {
@@ -80,13 +86,8 @@ div.orgChart div.node {
   font-size: 12px;
 }
 
-.org-add-button {
-  bottom: 3px;
-  left: 5px;
-  padding-left: 13px;
-  background: url(../img/add.png) no-repeat 0 3px;
-}
-
+.org-hide-button:hover,
+.org-show-button:hover,
 .org-add-button:hover,
 .org-del-button:hover {
   background-color: #eef;
@@ -94,12 +95,36 @@ div.orgChart div.node {
   cursor: pointer;
 }
 
-.org-del-button {
-  background: url(../img/delete.png) no-repeat;
+.org-hide-button{
+  cursor: pointer;
+  bottom: -6px;
+  right: 46%;
   width: 12px;
   height: 12px;
-  bottom: 7px;
-  right: 5px;
+  background: url(../img/delete.png) no-repeat;
+}
+
+.org-show-button{
+  cursor: pointer;
+  bottom: -6px;
+  right: 46%;
+  width: 12px;
+  height: 12px;
+  background: url(../img/add.png) no-repeat;
+}
+
+.org-add-button {
+  bottom: 10px;
+  left: 5px;
+  padding-left: 13px;
+  background: url(../img/add.png) no-repeat 0 3px;
+}
+
+.org-del-button {
+  bottom: 10px;
+  right: 6px;
+  padding-left: 13px;
+  background: url(../img/delete.png) no-repeat 0 3px;
 }
 
 .org-input { width: 90px; }
